--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
   align-items: center;
   height: 100vh;
   background-color: rgb(141, 141, 141);
-  margin: 0;
  }
   
 .container {
@@ -31,7 +30,7 @@ body {
  }
   
 button {
-  margin: 20px 10px 0 10px;
+  margin: 20px 10px 0 0;
   padding: 10px 20px;
   font-size: 16px;
   box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.74);
@@ -44,5 +43,5 @@ button:active {
  }
 
 #toggleColor {
-  width: 250px;
+  width: 235px;
 }
